# aula-git

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
fast_zero/: app.py
